refactor: apply Gemini Code Assist review feedback
Phase 1: Test Coverage (HIGH Priority)
- 만료된 세션 조회 테스트 케이스 추가
- Javadoc에 명시된 "만료된 세션도 조회 가능" 비즈니스 규칙 검증
- isExpired() == true 시나리오 테스트 추가
- 테스트 결과: 9/9 전체 통과 (기존 8 + 신규 1)

Phase 2: Code Quality (MEDIUM Priority)
- String.isBlank() 사용으로 검증 로직 개선 (GetUploadStatusService.java)
  - Before: sessionId == null || sessionId.trim().isEmpty()
  - After: sessionId == null || sessionId.isBlank()
  - 장점: 더 간결하고 가독성 좋은 Java 11+ 표준 API 활용

- 컨트롤러 중복 검증 로직 제거 (UploadStatusController.java)
  - Objects.requireNonNull(sessionId) 제거
  - 이유: 서비스 계층에서 이미 포괄적 검증 수행 (null/empty/blank)
  - 효과: Hexagonal Architecture 계층 책임 명확히 분리

영향받는 파일:
- GetUploadStatusServiceTest.java (테스트 1개 추가)
- GetUploadStatusService.java (검증 로직 개선)
- UploadStatusController.java (중복 검증 제거)

Addresses: Gemini PR#30 review comments